Lecture4/compiling_error.txt
D:\Users\ndsoc\Documents\Junior Year\AppliedDataStructures\Lecture4\fermat.cpp: In function 'bool MillerRabin(uint64_t, int)':
D:\Users\ndsoc\Documents\Junior Year\AppliedDataStructures\Lecture4\fermat.cpp:58:3: error: expected primary-expression before '}' token
   }
   ^
